bug: Fix blockquote bg on dark mode

--- a/client/styles/components/_dashboard.scss
+++ b/client/styles/components/_dashboard.scss
@@ -175,7 +175,7 @@
       display: block;
       border-width: 2px 0;
       border-style: solid;
-      border-color: #eee;
+      border-color: var(--input-bg);
       padding: 1.5em 0 0.5em;
       margin: 1.5em 0;
       position: relative;
